--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -105,8 +105,7 @@ i<!DOCTYPE html>
         <p class="manga-author">por Nio Nakatani</p>
         
         <div class="cover-description">
-            <h4>Descrição da Capa:</h4>
-            <p>A capa típica apresenta tons suaves de rosa e azul, com as protagonistas Yuu e Touko em um ambiente escolar. O design é delicado, com elementos florais sutis que remetem ao título "florescer".</p>
+		<img src="/images/bloom.jpg">
         </div>
 
         <div class="summary">
