--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             border-radius: 5px;
             margin-bottom: 15px;
             border: 1px solid #e9ecef;
+	    max-width: 100%;
+	    height: auto;
+	    display: block;
         }
         .cover-description h4 {
             margin-top: 0;
