--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             border-radius: 5px;
             margin-bottom: 15px;
             border: 1px solid #e9ecef;
+        }
+	.cover-description img {
 	    max-width: 100%;
 	    height: auto;
 	    display: block;
-        }
+	}
         .cover-description h4 {
             margin-top: 0;
             color: #495057;
